@@ -234,5 +234,21 @@
         <remarks />
       </Docs>
     </Member>
+    <Member MemberName="SelectedNode">
+      <MemberSignature Language="C#" Value="public Gtk.ITreeNode SelectedNode { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.ITreeNode</ReturnType>
+      </ReturnValue>
+      <Exception cref="T:System.InvalidOperationException">The Multiple selection mode is in use.</exception>
+      <Docs>
+        <summary>The selected node</summary>
+        <value>The currently selected node</value>
+        <remarks>
+          This property does not make sense in the Multiple selection mode. Therefore
+          it will throw an exception when used under this mode.
+        </remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
