@@ -1,3 +1,7 @@
+2005-08-28  Ben Maurer  <bmaurer@ximian.com>
+
+	* en/Gtk/NodeSelection.xml: Docs
+
 2005-08-14  John Luke  <john.luke@gmail.com>
 
 	* en/Gtk/IconView.xml: add iconview example
